@@ -2263,9 +2263,13 @@ name|shardId
 argument_list|,
 name|coreNodeProps
 argument_list|,
-literal|false
-argument_list|,
 name|coreNodeName
+argument_list|,
+literal|false
+comment|/* forcePublishState */
+argument_list|,
+literal|true
+comment|/* retryOnConnLoss */
 argument_list|)
 expr_stmt|;
 name|ExecutorService
