@@ -22,18 +22,6 @@ name|org
 operator|.
 name|apache
 operator|.
-name|http
-operator|.
-name|NoHttpResponseException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|lucene
 operator|.
 name|util
@@ -155,24 +143,6 @@ operator|.
 name|request
 operator|.
 name|QueryRequest
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|client
-operator|.
-name|solrj
-operator|.
-name|request
-operator|.
-name|UpdateRequest
 import|;
 end_import
 
@@ -875,12 +845,14 @@ name|shardId
 argument_list|,
 name|replicaCoreNodeProps
 argument_list|,
-literal|false
-argument_list|,
 name|leader
 operator|.
 name|getName
 argument_list|()
+argument_list|,
+literal|false
+argument_list|,
+literal|true
 argument_list|)
 argument_list|)
 expr_stmt|;
