@@ -774,6 +774,24 @@ literal|"5000"
 argument_list|)
 argument_list|)
 decl_stmt|;
+DECL|field|GET_LEADER_RETRY_INTERVAL_MS
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|GET_LEADER_RETRY_INTERVAL_MS
+init|=
+literal|50
+decl_stmt|;
+DECL|field|GET_LEADER_RETRY_DEFAULT_TIMEOUT
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|GET_LEADER_RETRY_DEFAULT_TIMEOUT
+init|=
+literal|4000
+decl_stmt|;
 DECL|field|LEADER_ELECT_ZKNODE
 specifier|public
 specifier|static
@@ -3523,6 +3541,66 @@ name|getCoreUrl
 argument_list|()
 return|;
 block|}
+DECL|method|getLeader
+specifier|public
+name|Replica
+name|getLeader
+parameter_list|(
+name|String
+name|collection
+parameter_list|,
+name|String
+name|shard
+parameter_list|)
+throws|throws
+name|InterruptedException
+block|{
+if|if
+condition|(
+name|clusterState
+operator|!=
+literal|null
+condition|)
+block|{
+name|Replica
+name|replica
+init|=
+name|clusterState
+operator|.
+name|getLeader
+argument_list|(
+name|collection
+argument_list|,
+name|shard
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|replica
+operator|!=
+literal|null
+operator|&&
+name|getClusterState
+argument_list|()
+operator|.
+name|liveNodesContain
+argument_list|(
+name|replica
+operator|.
+name|getNodeName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+name|replica
+return|;
+block|}
+block|}
+return|return
+literal|null
+return|;
+block|}
 comment|/**    * Get shard leader properties, with retry if none exist.    */
 DECL|method|getLeaderRetry
 specifier|public
@@ -3545,7 +3623,7 @@ name|collection
 argument_list|,
 name|shard
 argument_list|,
-literal|4000
+name|GET_LEADER_RETRY_DEFAULT_TIMEOUT
 argument_list|)
 return|;
 block|}
@@ -3590,29 +3668,12 @@ argument_list|)
 decl_stmt|;
 while|while
 condition|(
-name|System
-operator|.
-name|nanoTime
-argument_list|()
-operator|<
-name|timeoutAt
-operator|&&
-operator|!
-name|closed
-condition|)
-block|{
-if|if
-condition|(
-name|clusterState
-operator|!=
-literal|null
+literal|true
 condition|)
 block|{
 name|Replica
-name|replica
+name|leader
 init|=
-name|clusterState
-operator|.
 name|getLeader
 argument_list|(
 name|collection
@@ -3622,32 +3683,30 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|replica
+name|leader
 operator|!=
 literal|null
-operator|&&
-name|getClusterState
-argument_list|()
-operator|.
-name|liveNodesContain
-argument_list|(
-name|replica
-operator|.
-name|getNodeName
-argument_list|()
-argument_list|)
 condition|)
-block|{
 return|return
-name|replica
+name|leader
 return|;
-block|}
-block|}
+if|if
+condition|(
+name|System
+operator|.
+name|nanoTime
+argument_list|()
+operator|>=
+name|timeoutAt
+operator|||
+name|closed
+condition|)
+break|break;
 name|Thread
 operator|.
 name|sleep
 argument_list|(
-literal|50
+name|GET_LEADER_RETRY_INTERVAL_MS
 argument_list|)
 expr_stmt|;
 block|}
